# WiringPi

./: .gitignore  CMakeLists.txt  README.md
devLib/: CMakeLists.txt  Makefile  list.txt
gpio/: CMakeLists.txt  Makefile
wiringPi/: CMakeLists.txt  Makefile  wiringPiI2C.c
